<resources>
    <string name="app_name">Countries</string>
    <string name="flag_prefix">flag_%1$s</string>
    
    <!-- Messages -->
    <string name="countries_error">Couldn\'t Fetch Countries</string>
    <string name="countries_empty">No Countries</string>
    <string name="try_again">Try Again</string>
    <string name="country_notfound">Country not found</string>

    <!-- Main Activity -->
    <string name="search_hint">Search...</string>

    <!-- Labels -->
    <string name="dots">
        .....................................................................................................................................................................
    </string>
    <string name="parentheses_container">(%1$s)</string>
    <string name="region">Region</string>
    <string name="capital">Capital</string>
    <string name="calling_codes">Calling Codes</string>
    <string name="population">Population</string>
    <string name="area">Area</string>
    <string name="unknown">\?</string>
    <string name="show_on_map">Show on Map</string>
    <string name="install_map">Please install a map application</string>
</resources>
