<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   android:background="@color/white"
                                                   android:padding="@dimen/space_2x">

    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivCountryInfoFlag"
            android:layout_width="@dimen/flag_width"
            android:layout_height="@dimen/flag_height"
            tools:srcCompat="@drawable/ic_flag"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tvCountryItemName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCountryInfoName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextCountryInfoName"
            android:layout_marginTop="@dimen/space_1x"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/ivCountryInfoFlag"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivCountryInfoRegion"
            android:layout_width="@dimen/info_label_icon"
            android:layout_height="@dimen/info_label_icon"
            app:layout_constraintTop_toBottomOf="@+id/tvCountryInfoName"
            app:layout_constraintStart_toStartOf="parent"
            android:tint="@color/darkGray"
            android:src="@drawable/ic_region"
            android:layout_marginTop="@dimen/space_2x"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCountryInfoRegionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/ivCountryInfoRegion"
            app:layout_constraintBottom_toBottomOf="@id/ivCountryInfoRegion"
            app:layout_constraintStart_toEndOf="@id/ivCountryInfoRegion"
            android:layout_marginStart="@dimen/space_1x"
            style="@style/TextCountryInfoDetails"
            android:text="@string/region"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCountryInfoRegionLabelDots"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/ivCountryInfoRegion"
            app:layout_constraintBottom_toBottomOf="@id/ivCountryInfoRegion"
            app:layout_constraintStart_toEndOf="@id/tvCountryInfoRegionLabel"
            app:layout_constraintEnd_toStartOf="@+id/tvCountryInfoRegionValue"
            android:layout_marginStart="@dimen/space_0_5x"
            android:layout_marginEnd="@dimen/space_0_5x"
            style="@style/TextCountryInfoDots"
            android:text="@string/dots"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCountryInfoRegionValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/ivCountryInfoRegion"
            app:layout_constraintBottom_toBottomOf="@id/ivCountryInfoRegion"
            app:layout_constraintStart_toEndOf="@id/tvCountryInfoRegionLabelDots"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/TextCountryInfoDetails"/>

    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivCountryInfoPopulation"
            android:layout_width="@dimen/info_label_icon"
            android:layout_height="@dimen/info_label_icon"
            app:layout_constraintTop_toBottomOf="@+id/ivCountryInfoRegion"
            app:layout_constraintStart_toStartOf="parent"
            android:tint="@color/darkGray"
            android:src="@drawable/ic_population"
            android:layout_marginTop="@dimen/space_1x"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCountryInfoPopulationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/ivCountryInfoPopulation"
            app:layout_constraintBottom_toBottomOf="@id/ivCountryInfoPopulation"
            app:layout_constraintStart_toEndOf="@id/ivCountryInfoPopulation"
            android:layout_marginStart="@dimen/space_1x"
            style="@style/TextCountryInfoDetails"
            android:text="@string/population"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCountryInfoPopulationLabelDots"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/ivCountryInfoPopulation"
            app:layout_constraintBottom_toBottomOf="@id/ivCountryInfoPopulation"
            app:layout_constraintStart_toEndOf="@id/tvCountryInfoPopulationLabel"
            app:layout_constraintEnd_toStartOf="@+id/tvCountryInfoPopulationValue"
            android:layout_marginStart="@dimen/space_0_5x"
            android:layout_marginEnd="@dimen/space_0_5x"
            style="@style/TextCountryInfoDots"
            android:text="@string/dots"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCountryInfoPopulationValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/ivCountryInfoPopulation"
            app:layout_constraintBottom_toBottomOf="@id/ivCountryInfoPopulation"
            app:layout_constraintStart_toEndOf="@id/tvCountryInfoPopulationLabelDots"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/TextCountryInfoDetails"/>

    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivCountryInfoArea"
            android:layout_width="@dimen/info_label_icon"
            android:layout_height="@dimen/info_label_icon"
            app:layout_constraintTop_toBottomOf="@+id/ivCountryInfoPopulation"
            app:layout_constraintStart_toStartOf="parent"
            android:tint="@color/darkGray"
            android:src="@drawable/ic_area"
            android:layout_marginTop="@dimen/space_1x"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCountryInfoAreaLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/ivCountryInfoArea"
            app:layout_constraintBottom_toBottomOf="@id/ivCountryInfoArea"
            app:layout_constraintStart_toEndOf="@id/ivCountryInfoArea"
            android:layout_marginStart="@dimen/space_1x"
            style="@style/TextCountryInfoDetails"
            android:text="@string/area"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCountryInfoAreaLabelDots"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/ivCountryInfoArea"
            app:layout_constraintBottom_toBottomOf="@id/ivCountryInfoArea"
            app:layout_constraintStart_toEndOf="@id/tvCountryInfoAreaLabel"
            app:layout_constraintEnd_toStartOf="@+id/tvCountryInfoAreaValue"
            android:layout_marginStart="@dimen/space_0_5x"
            android:layout_marginEnd="@dimen/space_0_5x"
            style="@style/TextCountryInfoDots"
            android:text="@string/dots"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCountryInfoAreaValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/ivCountryInfoArea"
            app:layout_constraintBottom_toBottomOf="@id/ivCountryInfoArea"
            app:layout_constraintStart_toEndOf="@id/tvCountryInfoAreaLabelDots"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/TextCountryInfoDetails"/>

    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivCountryInfoCapital"
            android:layout_width="@dimen/info_label_icon"
            android:layout_height="@dimen/info_label_icon"
            app:layout_constraintTop_toBottomOf="@+id/ivCountryInfoArea"
            app:layout_constraintStart_toStartOf="parent"
            android:tint="@color/darkGray"
            android:src="@drawable/ic_capital"
            android:layout_marginTop="@dimen/space_1x"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCountryInfoCapitalLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/ivCountryInfoCapital"
            app:layout_constraintBottom_toBottomOf="@id/ivCountryInfoCapital"
            app:layout_constraintStart_toEndOf="@id/ivCountryInfoCapital"
            android:layout_marginStart="@dimen/space_1x"
            style="@style/TextCountryInfoDetails"
            android:text="@string/capital"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCountryInfoCapitalLabelDots"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/ivCountryInfoCapital"
            app:layout_constraintBottom_toBottomOf="@id/ivCountryInfoCapital"
            app:layout_constraintStart_toEndOf="@id/tvCountryInfoCapitalLabel"
            app:layout_constraintEnd_toStartOf="@+id/tvCountryInfoCapitalValue"
            android:layout_marginStart="@dimen/space_0_5x"
            android:layout_marginEnd="@dimen/space_0_5x"
            style="@style/TextCountryInfoDots"
            android:text="@string/dots"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCountryInfoCapitalValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/ivCountryInfoCapital"
            app:layout_constraintBottom_toBottomOf="@id/ivCountryInfoCapital"
            app:layout_constraintStart_toEndOf="@id/tvCountryInfoCapitalLabelDots"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/TextCountryInfoDetails"/>

    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivCountryInfoCallingCodes"
            android:layout_width="@dimen/info_label_icon"
            android:layout_height="@dimen/info_label_icon"
            app:layout_constraintTop_toBottomOf="@+id/ivCountryInfoCapital"
            app:layout_constraintStart_toStartOf="parent"
            android:tint="@color/darkGray"
            android:src="@drawable/ic_telephone"
            android:layout_marginTop="@dimen/space_1x"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCountryInfoCallingCodesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/ivCountryInfoCallingCodes"
            app:layout_constraintBottom_toBottomOf="@id/ivCountryInfoCallingCodes"
            app:layout_constraintStart_toEndOf="@id/ivCountryInfoCallingCodes"
            android:layout_marginStart="@dimen/space_1x"
            style="@style/TextCountryInfoDetails"
            android:text="@string/calling_codes"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCountryInfoCallingCodesLabelDots"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/ivCountryInfoCallingCodes"
            app:layout_constraintBottom_toBottomOf="@id/ivCountryInfoCallingCodes"
            app:layout_constraintStart_toEndOf="@id/tvCountryInfoCallingCodesLabel"
            app:layout_constraintEnd_toStartOf="@+id/tvCountryInfoCallingCodesValue"
            android:layout_marginStart="@dimen/space_0_5x"
            android:layout_marginEnd="@dimen/space_0_5x"
            style="@style/TextCountryInfoDots"
            android:text="@string/dots"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCountryInfoCallingCodesValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/ivCountryInfoCallingCodes"
            app:layout_constraintBottom_toBottomOf="@id/ivCountryInfoCallingCodes"
            app:layout_constraintStart_toEndOf="@id/tvCountryInfoCallingCodesLabelDots"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/TextCountryInfoDetails"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerCountryInfoShowOnMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/ivCountryInfoCallingCodes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/space_2x"
            android:padding="@dimen/space_2x">
        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivCountryInfoShowOnMap"
                android:layout_width="@dimen/info_label_icon"
                android:layout_height="@dimen/info_label_icon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tvCountryInfoShowOnMap"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="@dimen/space_1x"
                android:src="@drawable/ic_showmap"/>
        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCountryInfoShowOnMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivCountryInfoShowOnMap"
                style="@style/TextCountryInfoDetails"
                android:text="@string/show_on_map"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>